<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>otd</groupId>
	<artifactId>OhTheDungeonsYoullGo</artifactId>
	<version>1.21</version>
	<properties>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>
	<repositories>
		<repository>
			<id>papermc</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<!-- Vault Repo -->
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<!-- MythicMobs Repo -->
		<repository>
			<id>nexus</id>
			<name>Lumine Releases</name>
			<url>https://mvn.lumine.io/repository/maven-public/</url>
		</repository>
		<!-- EcoBosses Repo -->
		<repository>
			<id>auxilor-repo</id>
			<url>https://repo.auxilor.io/repository/maven-public/</url>
		</repository>
		<!-- PlaceholderAPI Repo -->
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<!-- WorldEdit Repo -->
		<repository>
			<id>enginehub-maven</id>
			<url>https://maven.enginehub.org/repo/</url>
		</repository>
		<repository>
			<id>maven</id>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.21-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.spigotmc.......</groupId>
			<artifactId>spigot</artifactId>
			<version>1.21-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
			<classifier>remapped-mojang</classifier>
		</dependency>
		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.lumine</groupId>
			<artifactId>Mythic-Dist</artifactId>
			<version>5.3.3-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.lumine.</groupId>
			<artifactId>Mythic-Dist</artifactId>
			<version>4.14.2-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<!-- -->
		<dependency>
			<groupId>com.willfp</groupId>
			<artifactId>EcoBosses</artifactId>
			<version>9.50.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.sk89q.worldedit</groupId>
			<artifactId>worldedit-bukkit</artifactId>
			<version>7.3.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.0.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.papermc</groupId>
			<artifactId>paperlib</artifactId>
			<version>1.0.8</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.openjdk.nashorn</groupId>
			<artifactId>nashorn-core</artifactId>
			<version>15.3</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
                <groupId>net.md-5</groupId>
                <artifactId>specialsource-maven-plugin</artifactId>
                <version>2.0.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>remap</goal>
                        </goals>
                        <id>remap-obf</id>
                        <configuration>
                            <srgIn>org.spigotmc:minecraft-server:1.21-R0.1-SNAPSHOT:txt:maps-mojang</srgIn>
                            <reverse>true</reverse>
                            <remappedDependencies>org.spigotmc:spigot:1.21-R0.1-SNAPSHOT:jar:remapped-mojang</remappedDependencies>
                            <remappedArtifactAttached>true</remappedArtifactAttached>
                            <remappedClassifierName>remapped-obf</remappedClassifierName>
                        </configuration>
                    </execution>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>remap</goal>
                        </goals>
                        <id>remap-spigot</id>
                        <configuration>
                            <inputFile>${project.build.directory}/${project.artifactId}-${project.version}-remapped-obf.jar</inputFile>
                            <srgIn>org.spigotmc:minecraft-server:1.21-R0.1-SNAPSHOT:csrg:maps-spigot</srgIn>
                            <remappedDependencies>org.spigotmc:spigot:1.21-R0.1-SNAPSHOT:jar:remapped-obf</remappedDependencies>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.3</version>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<relocations>
						<relocation>
							<pattern>org.bstats</pattern>
							<shadedPattern>otd.lib.bstats</shadedPattern>
						</relocation>
						<relocation>
							<pattern>io.papermc.lib</pattern>
							<shadedPattern>otd.lib.async.io.papermc.lib</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.openjdk.nashorn</pattern>
							<shadedPattern>otd.lib.org.openjdk.nashorn</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
